# src/main/kotlin/com/placenote/server/plugins/StatusPages.kt
@@ -1,32 +1,27 @@
 package com.placenote.server.plugins
 
 import com.placenote.server.api.ApiException
-import com.placenote.server.api.ProblemDetails
+import com.placenote.server.api.respondApiError
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.application.Application
 import io.ktor.server.application.install
 import io.ktor.server.plugins.statuspages.StatusPages
-import io.ktor.server.response.respond
 
 fun Application.configureStatusPages() {
     install(StatusPages) {
         exception<ApiException> { call, cause ->
-            call.respond(
+            call.respondApiError(
                 cause.statusCode,
-                ProblemDetails(
-                    status = cause.statusCode.value,
-                    detail = cause.message,
-                ),
+                cause.message ?: "Error",
+                cause.statusCode.value,
             )
         }
         exception<Throwable> { call, cause ->
             cause.printStackTrace()
-            call.respond(
+            call.respondApiError(
                 HttpStatusCode.InternalServerError,
-                ProblemDetails(
-                    status = 500,
-                    detail = "Error interno",
-                ),
+                "Error interno",
+                HttpStatusCode.InternalServerError.value,
             )
         }
     }
